feat: added dashboard endpoint
